# game_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  game_engine.sln  game_engine.vcxproj  game_engine.vcxproj.filters  notCMakeLists.txt
cmakeBuild/: CMakeCache.txt  GameEngine  Makefile  cmake_install.cmake
cmakeBuild/.cmake/api/v1/reply/: cache-v2-676b1f205ee7e2259d4d.json  cmakeFiles-v1-05bcb87f3b510f950af1.json  codemodel-v2-9f6021e442cc13e694ee.json  directory-src.thirdParty.lua-Debug-a4aad9a5c7ab7429e60b.json  index-2026-04-08T22-17-09-0876.json  target-GameEngine-Debug-2f22565480e2f50cb8ba.json  target-lua-Debug-731c94059a4c3d11c857.json  toolchains-v1-eff9963e8960633ab163.json
game_engine.xcodeproj/: project.pbxproj
game_engine.xcodeproj/xcshareddata/xcschemes/: game_engine.xcscheme
hw7demo/: game.config  rendering.config
hw7demo/actor_templates/: Binoculars.template  Block.template  Cuff.template  CuffKo.template  Door.template  Enemy.template  NPC.template  Player.template  PlayerKo.template  Secret.template  Tile.template  Villy.template  VisionTile.template
hw7demo/component_types/: AdvanceStageOnTouch.lua  BasicAIMovement.lua  Block.lua  CameraManager.lua  ClearFog.lua  CollectSecretOnTouch.lua  ConeVision.lua  Cuff.lua  CuffKo.lua  CursorManager.lua  DialogueManager.lua  FollowAIMovement.lua  FollowPlayer.lua  GameManager.lua  GameOverManager.lua  Hud.lua  IntroManager.lua  KeyboardControl.lua  KillOnTouch.lua  LaunchDialogueWhenNear.lua  NPC.lua  Player.lua  PlayerKo.lua  PostStageManager.lua  PreStageManager.lua  RevealMapWhileTouching.lua  SceneTransitionManager.lua  SpriteRenderer.lua  Tile.lua  TurnBased.lua
hw7demo/data/: level_design.tiled-session  map1.lua  map1.tmx  map2.lua  map2.tmx  map3.lua  map3.tmx  object_collection.tsx  objects.tsx
hw7demo/scenes/: dialogue.scene  gameover.scene  gameplay.scene  intro.scene  poststage.scene  prestage.scene
src/firstParty/: Actor.cpp  Actor.hpp  AudioDB.cpp  AudioDB.hpp  AudioHelper.h  ComponentManager.cpp  ComponentManager.hpp  Engine.cpp  Engine.hpp  EngineUtil.cpp  EngineUtil.hpp  Helper.h  ImageDB.cpp  ImageDB.hpp  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  Rigidbody.cpp  Rigidbody.hpp  SceneLoader.cpp  SceneLoader.hpp  TemplateDB.cpp  TemplateDB.hpp  TextDB.cpp  TextDB.hpp  main.cpp
